--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
     implementation 'com.android.support:recyclerview-v7:26.0.0-beta1'
     implementation files('libs/Msc.jar')
+    implementation 'com.google.code.gson:gson:2.8.2'
 }
